fix: align multi-select checkbox cells to top

--- a/static/css/tables.css
+++ b/static/css/tables.css
@@ -64,6 +64,10 @@ td {
   white-space: nowrap;
 }
 
+td.col-select {
+  vertical-align: top;
+}
+
 td:last-child {
   border-right: none;
 }
